[gd_scene load_steps=2 format=3 uid="uid://5t1psf0y80pk"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_xu6qp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xu6qp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1137.0
offset_top = -60.0
offset_right = 1138.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="ExploreExistingSolutions" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
text = "Explore Existing Solutions"

[node name="StartNewBuild" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Start a New Build"

[node name="LoadBuild" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Load your Build"

[connection signal="pressed" from="HBoxContainer/ExploreExistingSolutions" to="." method="_on_explore_existing_solutions_pressed"]
[connection signal="pressed" from="HBoxContainer/StartNewBuild" to="." method="_on_start_new_build_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadBuild" to="." method="_on_load_build_pressed"]
